* Two mixin modules to Transforms to support deprecating non-preferred parameter signatures:
** `Transforms::SepDeprecatable` (PR#124)
** `Transforms::MultivalPlusDelimDeprecatable` (PR#124)
* `Utils::StringNormalizer` service class (PR#124)
* `ignore_case` and `normalized` parameters for `Deduplicate::GroupedFieldValues` (PR#124)

=== Changed

=== Bugfixes
* Fix https://github.com/lyrasis/kiba-extend/issues/121[#121] (PR#122)

=== Deleted

=== Deprecated/Will break in a future version
* `sep` parameter in `Deduplicate::GroupedFieldValues` (PR#124)
* `multival` parameter in `Cspace::NormalizeForId` (PR#124)

=== Dev
* Run Rspec in random order with seed (PR#124)


== Releases

=== 3.2.2 - 2022-09-23

==== Added
* `Fraction::ToDecimal` transform (and supporting `Utils::ExtractFractions` and `Data::ConvertibleFraction` classes) (PR#108)
* `yardspec` gem to support running YARD examples as RSpec tests (PR#107)
* Branch coverage to `simplecov` setup (PR#107)

==== Changed
* Tests for the `Prepend::ToFieldValue` transform converted to use `yardspec` (PR#107)

==== Bugfixes
* No longer falls over when a project has nested job config settings (scope changes when used in a project, and the private :warn_unnested method couldn't be called)

=== 3.2.1 - 2022-09-21

==== Added
* Config setting to control string used as registry namespace separator

==== Bugfixes
* Require the kiba-common ShowMe extension so that option actually works when running jobs

==== Changed
* Refactoring `lib/kiba/extend.rb` so inter-application `require` statements can be removed

=== 3.2.0 - 2022-09-20

==== Added
* Configurable pre-job task handling
* `Kiba::Extend::Registry::FileRegistry.finalize` method
* Unnested `job_show_me`, `job_tell_me`, and `job_verbosity` config settings.

==== Deprecated/Will break in a future version
* Nested `job.show_me`, `job.tell_me`, and `job.verbosity` config settings.

=== 3.1.0 - 2022-09-20

==== Added